# rpg-game-master

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-20-rpg-game-master-design.md  2026-02-20-rpg-game-master-implementation.md
src/rpg_gm/: cli.py
src/rpg_gm/game/: commands.py  engine.py  narrator.py  state.py
src/rpg_gm/ingestion/: chunker.py  embedder.py  extractor.py  reader.py
src/rpg_gm/ui/: display.py
src/rpg_gm/world/: loader.py  models.py
tests/: test_chunker.py  test_commands.py  test_embedder.py  test_extractor.py  test_integration.py  test_loader.py  test_models.py  test_narrator.py  test_reader.py  test_state.py
tests/fixtures/: sample.txt
