[project]
name = "rpg-gm"
version = "0.1.0"
description = "Terminal RPG game master that turns books into explorable worlds"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pymupdf>=1.24.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.scripts]
rpg-gm = "rpg_gm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
